# CyberPrompt

./: .dockerignore  .env.example  .gitignore  AUDIT_COMPLETE_SUMMARY.md  BEFORE_AFTER_COMPARISON.txt  BUGFIX_IMPLEMENTATION_COMPLETE.md  BUGS_EXPLAINED_SIMPLY.md  CALCULATION_AUDIT.md  CHANGELOG.md  CODE_AUDIT_FINDINGS.md  COMPREHENSIVE_SOLUTION_PLAN.md  CONTEXT_NECESSITY_ANALYSIS.md  CRITICAL_ISSUES_ANALYSIS.md  DATASET_GENERATION.md  DATASET_SOURCES.md  Dockerfile  ENSEMBLE_IMPLEMENTATION_STATUS.md  ENSEMBLE_ONLY_FIX.md  FINAL_VERIFICATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INSIGHTS_PAGE_ACADEMIC_EVALUATION.md  LICENSE  LLAMA_BUG_INVESTIGATION.md  Makefile  PROGRESS_UI_FIX_PLAN.md  PROJECT_ARCHITECTURE.md  QUICK_START_VERIFICATION.md  README-SETUP.md  README.md  RESEARCH_ANALYSIS_CONTEXT_ISSUE.md  RESEARCH_NOTES.md  RESEARCH_README.md  RESEARCH_VALIDATION_AUDIT.md  SYSTEM_CORRECTNESS_VERIFIED.md  TOKEN_OPTIMIZATION_PLAN.md  VARIANT_TESTING_VERIFICATION_GUIDE.md  VERIFICATION_IMPLEMENTATION_COMPLETE.md  create_presentation.py  docker-compose.yml  enhance_presentation.py  (+8 more)
app/: __init__.py  main.py
app/api/: adaptive.py  analytics.py  documents.py  export.py  prompts.py  research.py  runs.py  stats.py  validation.py
app/core/: config.py  security.py
app/db/: connection.py  repositories.py
app/models/: __init__.py
app/services/: __init__.py  analytics_service.py  background_jobs.py  base.py  composite.py  ensemble.py  experiment.py  fsp.py  fsp_enhanced.py  groq_client.py  llm_client.py  prompt_generator.py  prompt_length_analysis.py  (+3 more)
cysecbench-data/: LICENSE  README.md
data/: prompts.json  prompts_backup_20250929_190547.json  prompts_backup_20251009_184533.json  prompts_backup_old.json
docker/: mongo-init.js
research/: SOC_GRC_PROMPT_LENGTH_THEORY.md
research-paper-materials/: Appendix_A_Statistical_Tables.txt  Appendix_B_Methodology_Details.txt  Appendix_C_Sample_Prompts.txt  Appendix_D_Judge_Reliability.txt  Assignment 3B Research paper.txt  README.md  Revision_Summary.txt
scripts/: add_dataset_versioning.py  audit_critical_logic.py  check_variants.py  clean_corrupted_runs.py  create_academic_variants.py  create_length_variants.py  export_static_prompts.py  fix_complex_ids.py  fix_dataset_issues.py  fix_dataset_versions.py  fix_length_bins.py  fix_medium_variants.py  fix_misbin_single_S_to_XS.py  fix_null_prompt_ids_simple.py  fix_run_prompt_ids.py  fix_token_counts.py  fix_variants.py  generate_adaptive_prompts.py  generate_authentic_dataset.py  generate_research_dataset.py  generate_research_dataset_v2_backup.py  generate_research_dataset_v3_backup.py  import_cysecbench.py  migrate_to_token_classification.py  quick_seed.py  research_seed_data.py  seed_data.py  simple_import.py  simplify_research_data.py  test_token_fix.py  test_variant_verification.sh  validate_token_classification.py
tests/: conftest.py  test_evaluation.py
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+140 files in other folders)
